--- a/Dockerfile7
+++ b/Dockerfile7
@@ -9,4 +9,4 @@ COPY Makefile Makefile
 COPY SPECS/haproxy.spec SPECS/haproxy.spec
 COPY SOURCES/* SOURCES/
 
-CMD make NO_SUDO=1 && cp /rpmbuild/RPMS/x86_64/* /RPMS && cp /rpmbuild/SRPMS/* /RPMS
+CMD make NO_SUDO=1 USE_LUA=$USE_LUA USE_PROMETHEUS=$USE_PROMETHEUS && cp /rpmbuild/RPMS/x86_64/* /RPMS && cp /rpmbuild/SRPMS/* /RPMS
